Update ch03 notebook: Add neural network examples and vector operations

--- a/notebooks/ch03-neural-prediction-forward-propagation.ipynb
+++ b/notebooks/ch03-neural-prediction-forward-propagation.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "4edbd676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy version: 2.3.5\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import numpy as np\n",
@@ -28,59 +36,254 @@
     "\n",
     "> Work for this chapter of *Grokking Deep Learning*.\n",
     "\n",
-    "## 1. Quick notes (5–10 bullets, in my own words)\n",
+    "## 1. Quick notes\n",
     "\n",
     "- What is this chapter *really* about?\n",
     "- Why does it matter?\n",
     "- Anything surprising or especially clear?\n",
     "\n",
-    "*(Keep this short. 5–10 bullets max.)*\n"
+    "- Q: How much data do you need to provide as input to make a prediction? A: How much would a human need?\n",
+    "  - To determine if there is a cat in a picture, you'd need to see the whole picture (all the pixels)\n",
+    "- Number of inputs/outputs largely dictates structure of the network\n",
+    "\n",
+    "- How do neural networks learn? Trial and error.\n",
+    "  - Make a prediction\n",
+    "  - Check it\n",
+    "  - Adjust weights based on too high/too low\n",
+    "\n",
+    "- A neural network basically scales an input by a certain amount (the weight(s))\n",
+    "- Weight is basically the sensitivity (or turning volume up/down) on a given input.\n",
+    "  - For example, if win/loss record is a good predictor of whether a team will win the next game, the weight will be larger.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "4d041e8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8500000000000001"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# 2. Code from the book\n",
     "#\n",
-    "# Recreate the main code examples from the chapter *by typing*,\n",
-    "# not copy/paste. Keep them as close to the book as is reasonable.\n",
+    "# Simplest neural network\n",
+    "weight = 0.1\n",
+    "def neural_network(input, weight):\n",
+    "    prediction = input * weight\n",
+    "    return prediction\n",
     "\n",
-    "# Example structure:\n",
-    "# def predict(...):\n",
-    "#     ...\n",
-    "#\n",
-    "# def train(...):\n",
-    "#     ...\n",
-    "#\n",
-    "# Your implementations here:\n"
+    "number_of_toes = [8.5, 9.5, 10, 9]\n",
+    "input = number_of_toes[0]\n",
+    "neural_network(input, weight)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9da02f8",
+   "metadata": {},
+   "source": [
+    "# Multiple inputs\n",
+    "You can combine multiple data points (nputs) into one prediction, effectively a weighted sum.\n",
+    "\n",
+    "When you want to process multiple inputs, you use a vector (list of numbers)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1c28af4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 10, 18]\n",
+      "[5, 7, 9]\n",
+      "6\n",
+      "2.0\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CHALLENGE: Vector Math\n",
+    "def elementwise_multiplication(vec_a, vec_b):\n",
+    "    assert(len(vec_a) == len(vec_b))\n",
+    "    result = list()\n",
+    "    for i in range(0, len(vec_a)):\n",
+    "        result.append(vec_a[i] * vec_b[i])\n",
+    "    return result\n",
+    "print(elementwise_multiplication([1,2,3], [4,5,6]))\n",
+    "\n",
+    "def elementwise_addition(vec_a, vec_b):\n",
+    "    assert(len(vec_a) == len(vec_b))\n",
+    "    result = list()\n",
+    "    for i in range(0, len(vec_a)):\n",
+    "        result.append(vec_a[i] + vec_b[i])\n",
+    "    return result\n",
+    "print(elementwise_addition([1,2,3], [4,5,6]))\n",
+    "\n",
+    "def vector_sum(vec_a):\n",
+    "    total = 0\n",
+    "    for n in vec_a:\n",
+    "        total += n\n",
+    "    return total\n",
+    "print(vector_sum([1,2,3]))\n",
+    "\n",
+    "def vector_average(vec_a):\n",
+    "    return vector_sum(vec_a) / len(vec_a)\n",
+    "print(vector_average([1,2,3]))\n",
+    "\n",
+    "# Elementwise multiplication, then sum the resulting vector\n",
+    "def vector_dot_product(vec_a, vec_b):\n",
+    "    assert(len(vec_a) == len(vec_b))\n",
+    "    return vector_sum(elementwise_multiplication(vec_a, vec_b))\n",
+    "print(vector_dot_product([1,2,3], [4,5,6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eee12c7",
+   "metadata": {},
+   "source": [
+    "A dot product gives a *notion of similiarity* between two vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fe8d395d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9800000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "def w_sum(a,b):\n",
+    "    assert(len(a) == len(b))\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output\n",
+    "\n",
+    "weights = [0.1, 0.2, 0]\n",
+    "def neural_network(input, weights):\n",
+    "    pred = w_sum(input, weights)\n",
+    "    return pred\n",
+    "\n",
+    "toes = [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "input = [toes[0],wlrec[0],nfans[0]]\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3ef4fa3",
+   "id": "5edb9c2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9800000000000001\n"
+     ]
+    }
+   ],
    "source": [
+    "# You can do all of this much more easily with NumPy\n",
+    "import numpy as np\n",
     "\n",
-    "# 3. One tiny experiment (<= 5 minutes)\n",
-    "#\n",
-    "# Pick exactly ONE thing to tweak:\n",
-    "# - Change the learning rate\n",
-    "# - Change the number of epochs\n",
-    "# - Change weight initialization\n",
-    "# - Add debug prints\n",
-    "# - Plot something the book didn't\n",
-    "# - Break something on purpose and see what happens\n",
-    "#\n",
-    "# The goal is *intuition*, not a giant research project.\n",
+    "weights = np.array([0.1, 0.2, 0])\n",
+    "def neural_network(input, weights):\n",
+    "    pred = input.dot(weights)\n",
+    "    return pred\n",
     "\n",
-    "# Your experiment code here:\n"
+    "toes = np.array([8.5, 9.5, 9.9, 9.0])\n",
+    "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+    "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+    "\n",
+    "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12a4c492",
+   "metadata": {},
+   "source": [
+    "Neural networks can be stacked. This is effectively what hidden layers are (taking the predictions of earlier layers as inputs and making further predictions based on those.) An example of when you might do this is complex image classification that requires multiple \"passes\" to identify complex patterns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d69fb20b",
+   "metadata": {},
+   "source": [
+    "# Numpy\n",
+    "\n",
+    "Numpy can be used to perform vector and matrix operations more conveniently.\n",
+    "\n",
+    "It will try to \"figure out\" what to do when the dimensions of operands don't match."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5ed4ea5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x*y: [10 20 30]\n",
+      "x*z: [[40 50 60]\n",
+      " [70 80 90]]\n",
+      "y*z: [[ 4 10 18]\n",
+      " [ 7 16 27]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = np.array([1,2,3])\n",
+    "z = np.array([[4,5,6],[7,8,9]])\n",
+    "\n",
+    "print(\"x*y:\", x*y)\n",
+    "print(\"x*z:\",x*z)\n",
+    "print(\"y*z:\", y*z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70997832",
+   "metadata": {},
+   "source": [
+    "Vectors are (1,n) matrices. Matrices shapes are expressed as (# of rows, # of cols). The inside numbers must match to multiply two matrices, yielding a result that is the shape of the outside numbers. e.g. a 2x3 * a 3x5 will yield a 2x5 result."
    ]
   },
   {
@@ -91,22 +294,34 @@
     "\n",
     "## 4. 2–3 sentence wrap-up\n",
     "\n",
-    "- What clicked in this chapter?\n",
-    "- What still feels fuzzy?\n",
-    "- What should future-me remember?\n",
-    "\n",
-    "*(Keep this to 2–3 sentences.)*\n"
+    "- Neural networks calculate weighted sums of inputs to predict (generate outputs)\n",
+    "- This is called forward propagation -- take input data, make a prediction\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a75fdf0b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python (Grokking DL)",
    "language": "python",
-   "name": "python3"
+   "name": "grokking-dl"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
