Update ch03 summary: Improve section formatting and add learning cycle

--- a/notebooks/ch03-neural-prediction-forward-propagation.ipynb
+++ b/notebooks/ch03-neural-prediction-forward-propagation.ipynb
@@ -292,15 +292,16 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 4. 2–3 sentence wrap-up\n",
+    "## 4. Summary\n",
     "\n",
     "- Neural networks calculate weighted sums of inputs to predict (generate outputs)\n",
-    "- This is called forward propagation -- take input data, make a prediction\n"
+    "- This is called forward propagation -- take input data, make a prediction\n",
+    "- Predict -> Compare -> Learn"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a75fdf0b",
+   "id": "2c5604cb",
    "metadata": {},
    "source": []
   }
